traversal.snake.Snake.scala.error
Compilation error:
Snake:8: error: not found: value &&
  while(!isFacingWall())&&(!test2) {forward(); test2=test_fin()};
                        ^